--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "api-health",
+  "name": "api-health-manager",
   "version": "1.0.0",
   "description": "This is a program that helps you monitor your api, and get realtime update about endpoints that are down. This package comes very handy when your api is in development stage as you get to see what is working and what is not",
   "main": "./dist/index.js",
-  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/Homoakin619/api-health.git"
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "start": "tsc && nodemon ./dist/index.js"
   },
   "author": "Ismail Akintunde",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/node-cron": "^3.0.11",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2"
